--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,146 @@
-.App {
-  text-align: center;
+.todotemplates {
+  text-align: left;
+  background-color: rgb(253, 254, 253);
+  max-width: 1200px;
+  min-width: 800px;
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
+  margin: 0 auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.todo-input{
+  background-color: #eee;
+  border-radius: 8px;
+  margin: 0 auto;
   display: flex;
-  flex-direction: column;
+  padding: 15px;
+  gap: 10px;
+  
+}
+
+input {
+  width:200px;
+  height:25px;
+  font-size:16px;
+}
+
+.input-group{
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  display: flex;
+  gap: 20px;
+  font-weight: 700;
+  font-size: 16px;
+  /* flex-grow: 1; */
+  /* display: flex;
+  align-items: center;
+  gap: 20px;
+  /* flex-grow: 1; */ 
 }
 
-.App-link {
-  color: #61dafb;
+.title {
+  box-sizing: border-box;
+  background-color: hwb(132 44% 22%);
+  height: 40px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.add-btn{ 
+  border: none;
+  height: 30px;
+  border-radius: 10px;
+  background-color: teal;
+  width: 100px;
+  color: #fff;
+  font-weight: 700;
+  float: right;
+  margin: 0 5px;
 }
+
+.input-group {
+  align-items: center;
+  display: flex;
+  gap: 20px;
+  font-weight: 700;
+  font-size: 16px;
+}
+
+.form-label {
+  font-size: 16px;
+  font-weight: 700
+}
+
+.add-input {
+  border: none;
+  border-radius: 12px;
+  height: 40px;
+  padding: 0 12px;
+  width: 240px
+}
+
+.button {
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  height: 40px;
+  width: 50%
+}
+
+.add-button {
+  background-color: teal;
+  border: none;
+  border-radius: 10px;
+  color: #fff;
+  font-weight: 700;
+  font-size: 16px;
+  height: 40px;
+  width: 140px
+}
+
+.button-set {
+  display: flex;
+  gap: 10px;
+  margin-top: 24px;
+  margin-inline-end: auto;
+}
+
+
+.todo-delbtn {
+  background-color: #fff;
+  border: 2px solid red;
+  border-radius: 10px;
+  font-weight: 700;
+  font-size: 16px;
+  height: 40px;
+  width: 50px
+}
+
+.todo-donebtn {
+  background-color: #fff;
+  border: 2px solid green;
+  border-radius: 10px;
+  font-weight: 700;
+  font-size: 16px;
+  height: 40px;
+  width: 50px
+}
+
+.todo-container {
+  border: 4px solid teal;
+  border-radius: 12px;
+  padding: 12px 24px 24px;
+  width: 270px;
+  margin: 0;
+}
+
+
+
+.list-container {
+  padding: 0 24px;
+  margin: 0;
+}
+
+.list-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 12px
+}
+
+/*# sourceMappingURL=main.b6466e8b.css.map*/
